--- a/misc/misc-sonstiges/src/main/java/de/freese/sonstiges/attraktor/TODO.txt
+++ b/misc/misc-sonstiges/src/main/java/de/freese/sonstiges/attraktor/TODO.txt
@@ -1,4 +1,4 @@
-Allgemeine Infos
+Allgemeine Informationen
 http://de.academic.ru/dic.nsf/dewiki/1439200
 
 http://www.xplora.org/downloads/Knoppix/Fraktalwelt/
